2005-10-18  Tor Lillqvist  <tml@novell.com>

	* gconf/gconf-backend.c (invalid_chars[]): Do allow space in
	configuration source addresses on Windows, as space is common in
	user names, and thus home directories (i.e., profile folders).

2005-10-09  Mark McLoughlin  <mark@skynet.ie>

	Based on patch from Lorenzo Colitti <lorenzo@colitti.com>
	in bug #316673

	* backends/markup-tree.c: (parse_tree): read and process
	the xml file incrementally in 4k chunks.

2005-09-13  Stepan Kasal  <kasal@ucw.cz>

	* gconf-2.m4.in (AM_GCONF_SOURCE_2): Simplify the handling of
	--enable-schemas-install.
	* Makefile.am (EXTRA_DIST): Remove sources for files gnerated at
	config time; they are distributed automatically.
	(DISTCLEANFILES): Deleted; we don't use intltool here.
	* .cvsignore: Add mkinstalldirs.

2005-09-10  Tor Lillqvist  <tml@novell.com>

	* gconf/gconf-backend.c (gconf_address_resource): On Win32, do
	_gconf_win32_replace_prefix() on the return value so that we
	change configure-time prefix pathnames in the path file into
	corresponding end-user installation prefix pathnames.

	* gconf/gconf-sanity-check.c: Use gstdio wrappers here, too.

	* backends/markup-backend.c (get_dir_from_address): Use
	G_IS_DIR_SEPARATOR().

2005-09-06  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post-release bump to 2.12.1.
	
==================== 2.12.0 ====================

2005-09-06  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.12.0.

2005-08-29  Tor Lillqvist  <tml@novell.com>

	* gconf-zip.in: Use correct capitalization of GConf in the zipfile
	names.

2005-08-22  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post-release bump to 2.11.93.
	
==================== 2.11.92 ====================

2005-08-22  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.11.92.

2005-08-10  Adam Weinberger  <adamw@gnome.org>

	* backends/evoldap-backend.c: Minor spelling fix
	  and capitalization tweak (fixes bug #301133)
