@@ -1,3 +1,9 @@
+2005-10-27  Alexander Larsson  <alexl@redhat.com>
+
+	* gconf/gconf-sources.c (gconf_sources_is_affected):
+	Correctly handle the case where the modified source
+	is not in the sources list.
+
 2005-10-18  Tor Lillqvist  <tml@novell.com>
 
 	* gconf/gconf-backend.c (invalid_chars[]): Do allow space in
